# lib/common/serverresponses.go
@@ -17,8 +17,10 @@ type CAInfoResponseNet struct {
 	CAName string
 	// Base64 encoding of PEM-encoded certificate chain
 	CAChain string
-	// Base64 encoding of idemix issuer public key
+	// Base64 encoding of Idemix issuer public key
 	IssuerPublicKey string
+	// Base64 encoding of PEM-encoded Idemix issuer revocation public key
+	IssuerRevocationPublicKey string
 	// Version of the server
 	Version string
 }
